[package]
name = "astermule-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "astermule_rs"
path = "src/lib.rs"

[[bin]]
name = "astermule-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.6", features = ["derive"] }
log = "0.4.17"
serde = "1.0.158"
serde_derive = "1.0.158"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
toml = "0.7.3"
